--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ body{
 .wrapper{
     width: 720px;
     margin: 0 auto;
+    padding: 20px;
 }
 
 .header{
@@ -36,7 +37,8 @@ body{
     margin-bottom: 50px;
 }
 
-.product img{
+.product img,
+.footer p{
     position: absolute;
     left: 50%;
     top: 50%;
@@ -62,7 +64,8 @@ body{
     margin-bottom: 30px;
 }
 
-.text a{
+.text a,
+.ball a{
     border-radius: 100px;
     padding: 22px 70px;
     width: 218px;
@@ -78,7 +81,8 @@ body{
     transition: 0.8s;
 }
 
-.text a:hover{
+.text a:hover,
+.ball a:hover{
     color: #000;
     background: #fff;
 }
@@ -129,3 +133,38 @@ body{
     display: flex;
 }
 
+.ball{
+    border-radius: 60px;
+    padding: 101px 37px;
+    width: 100%;
+    background: linear-gradient(148deg, #e8ffe8 0%, #d1f0ff 100%);
+    text-align: center;
+}
+
+.ball img{
+    margin-bottom: 100px;
+}
+
+.ball h2{
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 140%;
+    margin-bottom: 25px;
+}
+
+.ball p{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 137%;
+    margin-bottom: 25px;
+}
+
+.footer{
+    height: 260px;
+    position: relative;
+}
+
+.footer p{
+    font-weight: 400;
+    font-size: 15px;
+}
